# TAI

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  check.md  package.json  plan.md  pyproject.toml  run.py  test_delete_backup_12345.txt
config/: default.toml  development.toml
docs/: AGENT_MODE_PLAN.md  ANALYSIS_REPORT.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_GAP_ANALYSIS.md  BACKEND_POLISH.md  CHAT_PROJECT_CONTEXT_ANALYSIS.md  CHECKLIST.md  CRITICAL_ISSUES.md  CURSOR_ANALYSIS_PLAN.md  CURSOR_LEVEL_ROADMAP.md  NEXT_STEPS.md  OLLAMA_GPU.md  PART5_PLAN.md  PERFORMANCE.md  PHASE1_PLAN.md  PHASE3_PLAN.md  README.md  ROADMAP.md  UI_IMPROVEMENTS.md  WEB_SEARCH.md
docs/dev/: BACKEND_POLISH.md  CHECKLIST.md  PART5_PLAN.md  README.md  ROADMAP.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
scripts/: benchmark_performance.py  check_complex_tasks_live.py  check_ollama_gpu.py  check_ollama_remote.py
src/: __init__.py  main.py
src/api/: __init__.py  container.py  dependencies.py  store.py
src/api/routes/: analyze.py  assistant.py  chat.py  code.py  config.py  conversations.py  files.py  git.py  improve.py  models.py  projects.py  rag.py  terminal.py  workflow.py  workspace.py
src/api/sse/: __init__.py
src/application/: __init__.py
src/application/agent/: __init__.py  ollama_tools.py  tool_parser.py  tools.py  use_case.py
src/application/analysis/: __init__.py  deep_analysis_prompts.py  deep_analysis_rag.py  deep_analyzer.py
src/application/chat/: __init__.py  dto.py  use_case.py
src/application/improvement/: __init__.py  dto.py  use_case.py
src/application/shared/: __init__.py  llm_fallback.py
src/application/workflow/: __init__.py  dto.py  use_case.py
src/domain/: __init__.py
src/domain/entities/: model_selection.py  workflow_events.py  workflow_state.py
src/domain/ports/: __init__.py  config.py  embeddings.py  llm.py  rag.py
src/domain/services/: intent_detector.py  model_capability.py  model_router.py  model_selector.py
src/infrastructure/: __init__.py
src/infrastructure/agents/: __init__.py  analyzer.py  coder.py  file_writer.py  llm_helpers.py  planner.py  project_mapper.py  researcher.py  summarizer.py  tests_writer.py  validator.py
src/infrastructure/analyzer/: __init__.py  architecture.py  code_smells.py  coverage_collector.py  dependency_graph.py  file_metrics.py  models.py  project_analyzer.py  report_generator.py  security_scanner.py
src/infrastructure/config/: __init__.py  model_validator.py  toml_loader.py
src/infrastructure/embeddings/: __init__.py  ollama.py  openai_compatible.py
src/infrastructure/llm/: ollama.py  (+2 more)
tests/: conftest.py  test_chat.py  test_code.py  test_code_security.py  test_complex_tasks.py  test_config.py  test_files_extended.py  test_git.py  test_health.py  test_keyboard_layout.py  test_models.py  test_performance_metrics.py  test_project_analyzer.py  test_projects.py  test_rag.py  test_rag_extended.py  test_terminal.py  test_workflow.py
(+108 files in other folders)
