[project]
name = "codegen-ai"
version = "0.1.0"
description = "Local AI code generation system - Cursor alternative"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi[standard]>=0.115,<0.130",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9,<3",
    "sse-starlette>=3.2",
    "langgraph>=1.0,<2.0",
    "langchain-core>=0.3",
    "ollama>=0.4",
    "httpx[http2]>=0.28",
    "tomli-w>=1.0",
    "structlog>=24.0",
    "slowapi>=0.1",
    "tenacity>=8.0",
    "chromadb>=0.5,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "coverage>=7.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
