[project]
name = "codegen-ai"
version = "0.1.0"
description = "Local AI code generation system - Cursor alternative"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi[standard]>=0.115,<0.130",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9,<3",
    "sse-starlette>=3.2",
    "langgraph>=1.0,<2.0",
    "langchain-core>=0.3",
    "ollama>=0.4",
    "httpx[http2]>=0.28",
    "tomli-w>=1.0",
    "structlog>=24.0",
    "slowapi>=0.1",
    "tenacity>=8.0",
    "chromadb>=0.5,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "coverage>=7.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
# Длинные строки в промптах и описаниях инструментов допустимы
[tool.ruff.lint.per-file-ignores]
"src/application/agent/ollama_tools.py" = ["E501"]
"src/application/agent/tools.py" = ["E501"]
"src/application/analysis/deep_analysis_prompts.py" = ["E501"]
"src/infrastructure/services/assistant_modes.py" = ["E501"]
"src/infrastructure/services/prompt_templates.py" = ["E501"]
"src/infrastructure/agents/summarizer.py" = ["E501"]
"src/infrastructure/analyzer/security_scanner.py" = ["E501"]
"src/infrastructure/analyzer/coverage_collector.py" = ["E501"]
"src/infrastructure/agents/analyzer.py" = ["E501"]
"src/application/analysis/deep_analyzer.py" = ["E501"]
"src/application/chat/use_case.py" = ["E501"]
"src/infrastructure/llm/ollama.py" = ["E501"]
"src/infrastructure/llm/openai_compatible.py" = ["E501"]
# Tests: docstrings on fixtures and test packages optional
"tests/**" = ["D104", "D102", "D103", "D107"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests that call real LLM (deselect with -m 'not slow')",
]
